--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -101,6 +101,8 @@
 
 \newcommand{\fns}{\mathsf{Fns}}
 
+\newcommand{\folded}{\mathsf{Folded}}
+
 \newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
 
 \newcommand{\freevars}{\mathsf{FreeVars}}
@@ -139,17 +141,11 @@
 
 \newcommand{\judges}{\vdash}
 
-\newcommand{\mergeinvs}{\textsc{Mrg}\xspace}
-
-\newcommand{\multiset}[1]{\mathsf{MultiSet}[ #1 ]}
-
 \newcommand{\nilrel}{\mathsf{NilRel}}
 
 \newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
 
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
-
-\newcommand{\onestep}{\mathsf{OneStep}}
 
 \newcommand{\ops}{\mathsf{ops}}
 
@@ -223,6 +219,8 @@
 
 \newcommand{\subexpseqs}{\mathsf{ExpSeqs}}
 
+\newcommand{\subexptypes}[2]{\mathsf{SubExpTypes}[ #1, #2 ]}
+
 \newcommand{\symrelpreds}[1]{\mathsf{RelPreds}[ #1 ]}
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
@@ -255,11 +253,11 @@
 
 \newcommand{\vars}{\mathsf{Vars}}
 
-\newcommand{\verify}{\textsc{Verify}\xspace}
+\newcommand{\verify}{\textsc{Infer}\xspace}
 
 \newcommand{\verifyaux}{\textsc{VAux}\xspace}
 
-\newcommand{\verifybnd}{\textsc{VerifyBnd}\xspace}
+\newcommand{\verifybnd}{\textsc{InferUnfld}\xspace}
 
 \newcommand{\verifyunfoldingsaux}{\textsc{VerifyUnfoldings}'\xspace}
 
