--- a/draft/std.tex
+++ b/draft/std.tex
@@ -1,5 +1,5 @@
 % Standard math shorthand.
-\newcommand{\add}[2]{#1 \union \{ #2 \}}
+\newcommand{\add}[2]{\{ #1 \} \union #2 }
 
 \newcommand{\assign}{\mathbin{:=}}
 
